halfway through abstracting values

--- a/index.html
+++ b/index.html
@@ -162,196 +162,196 @@
                         </div>
 <!-- End of card 1 -->
 <!-- Start of card 2 -->
-                        <div class="card" style="display: none;">
+                        <div class="card" style="display: none;" id="i2">
                             <div class="card-header">
                                 <h2 class="mb-0 d-flex justify-content-between">
-                                    <button class="btn btn-link capitalize" type="button" data-toggle="collapse" data-target="#inventory2target" id="inventory2">
+                                    <button class="btn btn-link capitalize" type="button" data-toggle="collapse" data-target="#i2Target" id="i2Name">
                                     </button>
                                     <div class="input-group">
-                                        <input type="number" class="form-control" placeholder="Price">
+                                        <input type="number" class="form-control" placeholder="Price" id="i2SP">
                                         <div class="input-group-append">
                                             <span class="input-group-text">$</span>
                                         </div>
                                         <div class="input-group-append">
-                                            <button id="item2sell" class="btn btn-outline-secondary" type="button">Sell</button>
+                                            <button id="i2Btn" class="btn btn-outline-secondary" type="button">Sell</button>
                                         </div>
                                     </div>
                                 </h2>
                             </div>
 
-                            <div id="inventory2target" class="collapse" data-parent="#inventory">
+                            <div id="i2Target" class="collapse" data-parent="#inventory">
                                 <div class="card-body">
                                     <ul>
-                                        <li>Bought on Day <span id="dateBought2"></span></li>
-                                        <li>Bought for <span id="buyingPrice2"></span>$</li>
+                                        <li>Bought on Day <span id="i2Date"></span></li>
+                                        <li>Bought for <span id="i2BP"></span>$</li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
 <!-- End of card 2 -->
 <!-- Start of card 3 -->
-                        <div class="card" style="display: none;">
+                        <div class="card" style="display: none;" id="i3">
                             <div class="card-header">
                                 <h2 class="mb-0 d-flex justify-content-between">
-                                    <button class="btn btn-link capitalize" type="button" data-toggle="collapse" data-target="#inventory3target" id="inventory3">
+                                    <button class="btn btn-link capitalize" type="button" data-toggle="collapse" data-target="#i3Target" id="i3Name">
                                     </button>
                                     <div class="input-group">
-                                        <input type="number" class="form-control" placeholder="Price">
+                                        <input type="number" class="form-control" placeholder="Price" id="i3SP">
                                         <div class="input-group-append">
                                             <span class="input-group-text">$</span>
                                         </div>
                                         <div class="input-group-append">
-                                            <button id="item3sell" class="btn btn-outline-secondary" type="button">Sell</button>
+                                            <button id="i3Btn" class="btn btn-outline-secondary" type="button">Sell</button>
                                         </div>
                                     </div>
                                 </h2>
                             </div>
 
-                            <div id="inventory3target" class="collapse" data-parent="#inventory">
+                            <div id="i3Target" class="collapse" data-parent="#inventory">
                                 <div class="card-body">
                                     <ul>
-                                        <li>Bought on Day <span id="dateBought3"></span></li>
-                                        <li>Bought for <span id="buyingPrice3"></span>$</li>
+                                        <li>Bought on Day <span id="i3Date"></span></li>
+                                        <li>Bought for <span id="i3BP"></span>$</li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
 <!-- End of card 3 -->
 <!-- Start of card 4 -->
-                        <div class="card" style="display: none;">
+                        <div class="card" style="display: none;" id="i4">
                             <div class="card-header">
                                 <h2 class="mb-0 d-flex justify-content-between">
-                                    <button class="btn btn-link capitalize" type="button" data-toggle="collapse" data-target="#inventory4target" id="inventory4">
+                                    <button class="btn btn-link capitalize" type="button" data-toggle="collapse" data-target="#i4Target" id="i4Name">
                                     </button>
                                     <div class="input-group">
-                                        <input type="number" class="form-control" placeholder="Price">
+                                        <input type="number" class="form-control" placeholder="Price" id="i4SP">
                                         <div class="input-group-append">
                                             <span class="input-group-text">$</span>
                                         </div>
                                         <div class="input-group-append">
-                                            <button id="item4sell" class="btn btn-outline-secondary" type="button">Sell</button>
+                                            <button id="i4Btn" class="btn btn-outline-secondary" type="button">Sell</button>
                                         </div>
                                     </div>
                                 </h2>
                             </div>
 
-                            <div id="inventory4target" class="collapse" data-parent="#inventory">
+                            <div id="i4Target" class="collapse" data-parent="#inventory">
                                 <div class="card-body">
                                     <ul>
-                                        <li>Bought on Day <span id="dateBought4"></span></li>
-                                        <li>Bought for <span id="buyingPrice4"></span>$</li>
+                                        <li>Bought on Day <span id="i4Date"></span></li>
+                                        <li>Bought for <span id="i4BP"></span>$</li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
 <!-- End of card 4 -->
 <!-- Start of card 5 -->
-                        <div class="card" style="display: none;">
+                        <div class="card" style="display: none;" id="i5">
                             <div class="card-header">
                                 <h2 class="mb-0 d-flex justify-content-between">
-                                    <button class="btn btn-link capitalize" type="button" data-toggle="collapse" data-target="#inventory5target" id="inventory5">
+                                    <button class="btn btn-link capitalize" type="button" data-toggle="collapse" data-target="#i5Target" id="i5Name">
                                     </button>
                                     <div class="input-group">
-                                        <input type="number" class="form-control" placeholder="Price">
+                                        <input type="number" class="form-control" placeholder="Price" id="i5SP">
                                         <div class="input-group-append">
                                             <span class="input-group-text">$</span>
                                         </div>
                                         <div class="input-group-append">
-                                            <button id="item5sell" class="btn btn-outline-secondary" type="button">Sell</button>
+                                            <button id="i5Btn" class="btn btn-outline-secondary" type="button">Sell</button>
                                         </div>
                                     </div>
                                 </h2>
                             </div>
 
-                            <div id="inventory5target" class="collapse" data-parent="#inventory">
+                            <div id="i5Target" class="collapse" data-parent="#inventory">
                                 <div class="card-body">
                                     <ul>
-                                        <li>Bought on Day <span id="dateBought5"></span></li>
-                                        <li>Bought for <span id="buyingPrice5"></span>$</li>
+                                        <li>Bought on Day <span id="i5Date"></span></li>
+                                        <li>Bought for <span id="i5BP"></span>$</li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
 <!-- End of card 5 -->
 <!-- Start of card 6 -->
-                        <div class="card" style="display: none;">
+                        <div class="card" style="display: none;" id="i6">
                             <div class="card-header">
                                 <h2 class="mb-0 d-flex justify-content-between">
-                                    <button class="btn btn-link capitalize" type="button" data-toggle="collapse" data-target="#inventory6target" id="inventory6">
+                                    <button class="btn btn-link capitalize" type="button" data-toggle="collapse" data-target="#i6Target" id="i6Name">
                                     </button>
                                     <div class="input-group">
-                                        <input type="number" class="form-control" placeholder="Price">
+                                        <input type="number" class="form-control" placeholder="Price" id="i6SP">
                                         <div class="input-group-append">
                                             <span class="input-group-text">$</span>
                                         </div>
                                         <div class="input-group-append">
-                                            <button id="item6sell" class="btn btn-outline-secondary" type="button">Sell</button>
+                                            <button id="i6Btn" class="btn btn-outline-secondary" type="button">Sell</button>
                                         </div>
                                     </div>
                                 </h2>
                             </div>
 
-                            <div id="inventory6target" class="collapse" data-parent="#inventory">
+                            <div id="i6Target" class="collapse" data-parent="#inventory">
                                 <div class="card-body">
                                     <ul>
-                                        <li>Bought on Day <span id="dateBought6"></span></li>
-                                        <li>Bought for <span id="buyingPrice6"></span>$</li>
+                                        <li>Bought on Day <span id="i6Date"></span></li>
+                                        <li>Bought for <span id="i6BP"></span>$</li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
 <!-- End of card 6 -->
 <!-- Start of card 7 -->
-                        <div class="card" style="display: none;">
+                        <<div class="card" style="display: none;" id="i7">
                             <div class="card-header">
                                 <h2 class="mb-0 d-flex justify-content-between">
-                                    <button class="btn btn-link capitalize" type="button" data-toggle="collapse" data-target="#inventory7target" id="inventory7">
+                                    <button class="btn btn-link capitalize" type="button" data-toggle="collapse" data-target="#i7Target" id="i7Name">
                                     </button>
                                     <div class="input-group">
-                                        <input type="number" class="form-control" placeholder="Price">
+                                        <input type="number" class="form-control" placeholder="Price" id="i7SP">
                                         <div class="input-group-append">
                                             <span class="input-group-text">$</span>
                                         </div>
                                         <div class="input-group-append">
-                                            <button id="item7sell" class="btn btn-outline-secondary" type="button">Sell</button>
+                                            <button id="i7Btn" class="btn btn-outline-secondary" type="button">Sell</button>
                                         </div>
                                     </div>
                                 </h2>
                             </div>
 
-                            <div id="inventory7target" class="collapse" data-parent="#inventory">
+                            <div id="i7Target" class="collapse" data-parent="#inventory">
                                 <div class="card-body">
                                     <ul>
-                                        <li>Bought on Day <span id="dateBought7"></span></li>
-                                        <li>Bought for <span id="buyingPrice7"></span>$</li>
+                                        <li>Bought on Day <span id="i7Date"></span></li>
+                                        <li>Bought for <span id="i7BP"></span>$</li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
 <!-- End of card 7 -->
 <!-- Start of card 8 -->
-                        <div class="card" style="display: none;">
+                        <div class="card" style="display: none;" id="i8">
                             <div class="card-header">
                                 <h2 class="mb-0 d-flex justify-content-between">
-                                    <button class="btn btn-link capitalize" type="button" data-toggle="collapse" data-target="#inventory8target" id="inventory8">
+                                    <button class="btn btn-link capitalize" type="button" data-toggle="collapse" data-target="#i8Target" id="i8Name">
                                     </button>
                                     <div class="input-group">
-                                        <input type="number" class="form-control" placeholder="Price">
+                                        <input type="number" class="form-control" placeholder="Price" id="i8SP">
                                         <div class="input-group-append">
                                             <span class="input-group-text">$</span>
                                         </div>
                                         <div class="input-group-append">
-                                            <button id="item8sell" class="btn btn-outline-secondary" type="button">Sell</button>
+                                            <button id="i8Btn" class="btn btn-outline-secondary" type="button">Sell</button>
                                         </div>
                                     </div>
                                 </h2>
                             </div>
 
-                            <div id="inventory8target" class="collapse" data-parent="#inventory">
+                            <div id="i8Target" class="collapse" data-parent="#inventory">
                                 <div class="card-body">
                                     <ul>
-                                        <li>Bought on Day <span id="dateBought8"></span></li>
-                                        <li>Bought for <span id="buyingPrice8"></span>$</li>
+                                        <li>Bought on Day <span id="i8Date"></span></li>
+                                        <li>Bought for <span id="i8BP"></span>$</li>
                                     </ul>
                                 </div>
                             </div>
