able to generate during start state, able to buy and store in inventory, able to sell and able to make a sale

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                         </div>
 <!-- End of card 6 -->
 <!-- Start of card 7 -->
-                        <<div class="card" style="display: none;" id="i7">
+                        <div class="card" style="display: none;" id="i7">
                             <div class="card-header">
                                 <h2 class="mb-0 d-flex justify-content-between">
                                     <button class="btn btn-link capitalize" type="button" data-toggle="collapse" data-target="#i7Target" id="i7Name">
