add game tips modal

--- a/index.html
+++ b/index.html
@@ -377,10 +377,34 @@
                                 <span id="money">1000</span><span>$</span>
                             </div>
                         </h4>
+                        <div class="d-flex justify-content-end">
+                            <button type="button" class="btn btn-danger btn-xs" data-toggle="modal" data-target="#help">Help</button>
+                        </div>
                     </div>
                 </div>
             </div>
 <!-- End of the right side of screen -->
+<!-- Help -->
+            <div id="help" class="modal fade" tabindex="-1" role="dialog">
+                <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Welcome to the Virtual Marketplace!</h5>
+                            <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+                        </div>
+                        <div class="modal-body">
+                            <p>You are a trader of all things virtual! You start off with 1000$ of virtual currency. Buy things and sell them to earn more money! Some tips to get you started:</p>
+                            <hr>
+                            <p>The marketplace will only refresh after you click 'next' to go to the next day.</p>
+                            <p>Once you successfully purchased an item, it will appear in your inventory. You can check the date and price of the item by clicking on it.</p>
+                            <p>To sell an item, simply set the price and click sell. Be warned that if the price is too high it won't be sold!</p>
+                            <p>You can see the items that you are currently selling at 'Your Shop' and at the end of each day there's a chance that your item will be sold and the money will go to your pocket.</p>
+                            <p>Having a shop costs rent. 200$ rent will be deducted from you every 7 days. You can check how many days it has been and how much money you have in the 'Status' panel. The help button is also there if you need to read this again. Good Luck!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+<!-- End help -->
         </div>
     </div>
 <!-- Preset bootstrap JS -->
