--- a/index.html
+++ b/index.html
@@ -377,7 +377,10 @@
                                 <span id="money">1000</span><span>$</span>
                             </div>
                         </h4>
-                        <div class="d-flex justify-content-end">
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div>
+                            <span>Hi-Score: </span><span id="hiScore"></span>
+                            </div>
                             <button type="button" class="btn btn-danger btn-xs" data-toggle="modal" data-target="#help">Help</button>
                         </div>
                     </div>
