--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
             </div>
 <!-- End of the center of screen -->
 <!-- Start of game log -->
-            <div class="col-lg-2 d-flex align-items-start flex-column" id="gameLog">
+            <div class="col-lg-2 d-flex align-items-start flex-column overflow-auto" id="gameLog" style="max-height: 700px">
                 <h3 class="bg-warning text-dark rounded text-center" style="width: 100%;">Updates</h3>
             </div>
 <!-- End of game log -->
