added market factors

--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
                                     <ul>
                                         <li>Bought on Day <span id="i1Date"></span></li>
                                         <li>Bought for <span id="i1BP"></span>$</li>
+                                        <li>Market price <span id='i1MP'></span>$</li>
                                     </ul>
                                 </div>
                             </div>
@@ -183,6 +184,7 @@
                                     <ul>
                                         <li>Bought on Day <span id="i2Date"></span></li>
                                         <li>Bought for <span id="i2BP"></span>$</li>
+                                        <li>Market price <span id='i2MP'></span>$</li>
                                     </ul>
                                 </div>
                             </div>
@@ -208,6 +210,7 @@
                                     <ul>
                                         <li>Bought on Day <span id="i3Date"></span></li>
                                         <li>Bought for <span id="i3BP"></span>$</li>
+                                        <li>Market price <span id='i3MP'></span>$</li>
                                     </ul>
                                 </div>
                             </div>
@@ -233,6 +236,7 @@
                                     <ul>
                                         <li>Bought on Day <span id="i4Date"></span></li>
                                         <li>Bought for <span id="i4BP"></span>$</li>
+                                        <li>Market price <span id='i4MP'></span>$</li>
                                     </ul>
                                 </div>
                             </div>
@@ -258,6 +262,7 @@
                                     <ul>
                                         <li>Bought on Day <span id="i5Date"></span></li>
                                         <li>Bought for <span id="i5BP"></span>$</li>
+                                        <li>Market price <span id='i5MP'></span>$</li>
                                     </ul>
                                 </div>
                             </div>
@@ -283,6 +288,7 @@
                                     <ul>
                                         <li>Bought on Day <span id="i6Date"></span></li>
                                         <li>Bought for <span id="i6BP"></span>$</li>
+                                        <li>Market price <span id='i6MP'></span>$</li>
                                     </ul>
                                 </div>
                             </div>
@@ -308,6 +314,7 @@
                                     <ul>
                                         <li>Bought on Day <span id="i7Date"></span></li>
                                         <li>Bought for <span id="i7BP"></span>$</li>
+                                        <li>Market price <span id='i7MP'></span>$</li>
                                     </ul>
                                 </div>
                             </div>
@@ -333,6 +340,7 @@
                                     <ul>
                                         <li>Bought on Day <span id="i8Date"></span></li>
                                         <li>Bought for <span id="i8BP"></span>$</li>
+                                        <li>Market price <span id='i8MP'></span>$</li>
                                     </ul>
                                 </div>
                             </div>
